# SpicyPP

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  spicy  tests  tests[1]_include.cmake  tests[1]_tests.cmake
.csettings/: cdt.managedbuild.toolchain.gnu.base.732733976_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.base.732733976_org.eclipse.cdt.core.settings
.github/workflows/: integrator.yml
Release/: spicy  tests
SpicyPP/: .project
Testing/Temporary/: CTestCostData.txt
documentation/: doxygenTest.Doxyfile  qtSetup.md  usefull_Links
documentation/html/: Component_8h.html  Component_8h__dep__incl.dot  Component_8h__dep__incl.md5  Component_8h__incl.dot  Component_8h__incl.md5  Component_8h_source.html  Matrix_8cpp.html  Matrix_8cpp__incl.dot  Matrix_8cpp__incl.md5  Matrix_8h.html  Matrix_8h__dep__incl.dot  Matrix_8h__dep__incl.md5  Matrix_8h__incl.dot  Matrix_8h__incl.md5  Matrix_8h_source.html  Matrix__test_8cpp.html  Matrix__test_8cpp__incl.dot  Matrix__test_8cpp__incl.md5  Network_8cpp.html  Network_8cpp__incl.dot  Network_8cpp__incl.md5  Network_8h.html  Network_8h__dep__incl.dot  Network_8h__dep__incl.md5  Network_8h__incl.dot  Network_8h__incl.md5  Network_8h_source.html  Resistor_8cpp.html  Resistor_8cpp__incl.dot  Resistor_8cpp__incl.md5  Resistor_8h.html  Resistor_8h__dep__incl.dot  Resistor_8h__dep__incl.md5  Resistor_8h__incl.dot  Resistor_8h__incl.md5  Resistor_8h_source.html  VoltageSource_8cpp.html  VoltageSource_8cpp__incl.dot  VoltageSource_8cpp__incl.md5  VoltageSource_8h.html  (+58 more)
documentation/latex/: Component_8h.tex  Component_8h__dep__incl.dot  Component_8h__dep__incl.md5  Component_8h__incl.dot  Component_8h__incl.md5  Matrix_8cpp.tex  Matrix_8cpp.tex.tmp  Matrix_8cpp__incl.dot  Matrix_8cpp__incl.md5  Matrix_8h.tex  Matrix_8h__dep__incl.dot  Matrix_8h__dep__incl.md5  Matrix_8h__incl.dot  Matrix_8h__incl.md5  Matrix__test_8cpp.tex  Matrix__test_8cpp__incl.dot  Matrix__test_8cpp__incl.md5  Network_8cpp.tex  Network_8cpp__incl.dot  Network_8cpp__incl.md5  Network_8h.tex  Network_8h__dep__incl.dot  Network_8h__dep__incl.md5  Network_8h__incl.dot  Network_8h__incl.md5  Resistor_8cpp.tex  Resistor_8cpp__incl.dot  Resistor_8cpp__incl.md5  Resistor_8h.tex  Resistor_8h__dep__incl.dot  Resistor_8h__dep__incl.md5  Resistor_8h__incl.dot  Resistor_8h__incl.md5  VoltageSource_8cpp.tex  VoltageSource_8cpp__incl.dot  VoltageSource_8cpp__incl.md5  VoltageSource_8h.tex  VoltageSource_8h__dep__incl.dot  (+32 more)
spicy_autogen/: mocs_compilation.cpp
src/: SpicyPP.cpp  usefull_Links
tests_autogen/: .gitignore
(+59 files in other folders)
